--- a/app/src/main/res/layout/fragment_jogo.xml
+++ b/app/src/main/res/layout/fragment_jogo.xml
@@ -94,6 +94,8 @@
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
+            android:textColor="@color/black"
+            android:textSize="100sp"
             android:layout_weight="1"/>
 
         <Button
@@ -101,6 +103,8 @@
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
+            android:textColor="@color/black"
+            android:textSize="100sp"
             android:layout_weight="1"/>
 
         <Button
@@ -108,6 +112,8 @@
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
+            android:textColor="@color/black"
+            android:textSize="100sp"
             android:layout_weight="1"/>
         </TableRow>
         <TableRow
@@ -120,6 +126,8 @@
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
+            android:textColor="@color/black"
+            android:textSize="100sp"
             android:layout_weight="1"/>
 
         <Button
@@ -127,13 +135,17 @@
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
+            android:textColor="@color/black"
+            android:textSize="100sp"
             android:layout_weight="1"/>
 
         <Button
             android:id="@+id/bt12"
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
+            android:textColor="@color/black"
             android:layout_height="150dp"
+            android:textSize="100sp"
             android:layout_weight="1"/>
         </TableRow>
         <TableRow
@@ -144,8 +156,10 @@
         <Button
             android:id="@+id/bt20"
             android:layout_margin="5dp"
+            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
+            android:textSize="100sp"
             android:layout_weight="1"/>
 
         <Button
@@ -153,13 +167,17 @@
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
+            android:textColor="@color/black"
+            android:textSize="100sp"
             android:layout_weight="1"/>
 
         <Button
             android:id="@+id/bt22"
             android:layout_margin="5dp"
+            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
+            android:textSize="100sp"
             android:layout_weight="1"/>
     </TableRow>
 
