--- a/app/src/main/res/layout/fragment_jogo.xml
+++ b/app/src/main/res/layout/fragment_jogo.xml
@@ -23,13 +23,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="8"
             android:padding="10dp"
+            android:id="@+id/tv_jogador1"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textStyle="bold"
             android:text="@string/jogador1" />
 
         <TextView
             android:textColor="@color/black"
-            android:id="@+id/tv_palcar_jog1"
+            android:id="@+id/tvpalcarjog1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -59,6 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="8"
+            android:id="@+id/tv_jogador2"
             android:padding="10dp"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textStyle="bold"
@@ -66,7 +68,7 @@
 
         <TextView
             android:textColor="@color/black"
-            android:id="@+id/tv_palcar_jog2"
+            android:id="@+id/tvpalcarjog2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -95,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:textColor="@color/black"
-            android:textSize="100sp"
+            android:textSize="50sp"
             android:layout_weight="1"/>
 
         <Button
@@ -104,7 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:textColor="@color/black"
-            android:textSize="100sp"
+            android:textSize="50sp"
             android:layout_weight="1"/>
 
         <Button
@@ -113,7 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:textColor="@color/black"
-            android:textSize="100sp"
+            android:textSize="50sp"
             android:layout_weight="1"/>
         </TableRow>
         <TableRow
@@ -127,7 +129,7 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:textColor="@color/black"
-            android:textSize="100sp"
+            android:textSize="50sp"
             android:layout_weight="1"/>
 
         <Button
@@ -136,7 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:textColor="@color/black"
-            android:textSize="100sp"
+            android:textSize="50sp"
             android:layout_weight="1"/>
 
         <Button
@@ -145,7 +147,7 @@
             android:layout_width="wrap_content"
             android:textColor="@color/black"
             android:layout_height="150dp"
-            android:textSize="100sp"
+            android:textSize="50sp"
             android:layout_weight="1"/>
         </TableRow>
         <TableRow
@@ -159,7 +161,7 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
-            android:textSize="100sp"
+            android:textSize="50sp"
             android:layout_weight="1"/>
 
         <Button
@@ -168,7 +170,7 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:textColor="@color/black"
-            android:textSize="100sp"
+            android:textSize="50sp"
             android:layout_weight="1"/>
 
         <Button
@@ -177,7 +179,7 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
-            android:textSize="100sp"
+            android:textSize="50sp"
             android:layout_weight="1"/>
     </TableRow>
 
