--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -6,9 +6,17 @@
     tools:context=".fragment.InicioFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+
+    <Button
+        android:id="@+id/jogoDavelha"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:background="@color/purple_700"
+        android:text="jogo da velha"
+        android:textColor="@color/white">
+
+    </Button>
 
 </FrameLayout>
