--- a/app/src/main/res/layout/fragment_jogo.xml
+++ b/app/src/main/res/layout/fragment_jogo.xml
@@ -7,14 +7,48 @@
     android:layout_height="wrap_content"
     tools:context=".fragment.JogoFragment">
 
-
     <LinearLayout
-        android:id="@+id/linear_jogo_1"
+        android:id="@+id/velha"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:textColor="@color/black"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
+            android:padding="10dp"
+            android:id="@+id/deuvelha"
+            android:textAppearance="@android:style/TextAppearance.Medium"
+            android:textStyle="bold"
+            android:text="@string/deuvelha" />
+
+        <TextView
+            android:textColor="@color/black"
+            android:id="@+id/tvpalcarVelha"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="0"
+            android:textAlignment="center"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            android:padding="10dp" />
+
+
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linear_jogo_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/velha">
 
 
         <TextView
@@ -66,6 +100,7 @@
             android:textStyle="bold"
             android:text="@string/jogador2" />
 
+
         <TextView
             android:textColor="@color/black"
             android:id="@+id/tvpalcarjog2"
@@ -85,7 +120,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/linear_jogo_2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -95,7 +130,7 @@
             android:id="@+id/bt00"
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:textColor="@color/black"
             android:textSize="50sp"
             android:layout_weight="1"/>
@@ -104,7 +139,7 @@
             android:id="@+id/bt01"
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:textColor="@color/black"
             android:textSize="50sp"
             android:layout_weight="1"/>
@@ -113,7 +148,7 @@
             android:id="@+id/bt02"
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:textColor="@color/black"
             android:textSize="50sp"
             android:layout_weight="1"/>
@@ -127,7 +162,7 @@
             android:id="@+id/bt10"
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:textColor="@color/black"
             android:textSize="50sp"
             android:layout_weight="1"/>
@@ -136,7 +171,7 @@
             android:id="@+id/bt11"
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:textColor="@color/black"
             android:textSize="50sp"
             android:layout_weight="1"/>
@@ -146,7 +181,7 @@
             android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:textColor="@color/black"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:textSize="50sp"
             android:layout_weight="1"/>
         </TableRow>
@@ -160,25 +195,25 @@
             android:layout_margin="5dp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:textSize="50sp"
             android:layout_weight="1"/>
 
-        <Button
-            android:id="@+id/bt21"
-            android:layout_margin="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            android:textColor="@color/black"
-            android:textSize="50sp"
-            android:layout_weight="1"/>
+            <Button
+                android:id="@+id/bt21"
+                android:layout_width="wrap_content"
+                android:layout_height="140dp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:textColor="@color/black"
+                android:textSize="50sp" />
 
-        <Button
+            <Button
             android:id="@+id/bt22"
             android:layout_margin="5dp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             android:textSize="50sp"
             android:layout_weight="1"/>
     </TableRow>
